src/objects/ddrive__Sync_Objects__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__API_Alias__c</fullName>
        <label>API Alias</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Always_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Bulky_mode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bulky mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Sync Object</relationshipLabel>
        <relationshipName>Sync_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddrive__Execution_Order_No__c</fullName>
        <label>Execution Order No</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Intermediate_Object_Name__c</fullName>
        <label>Intermediate Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Interval__c</fullName>
        <defaultValue>1826</defaultValue>
        <label>Interval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Job_ID__c</fullName>
        <label>Job ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Future_Running__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Future Running</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Modified__c</fullName>
        <defaultValue>DATE(1997,1,1)</defaultValue>
        <label>Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Sync_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Sync Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Last_Synced__c</fullName>
        <label>Last Synced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ddrive__Page_Number__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Page Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Page_Size__c</fullName>
        <defaultValue>500</defaultValue>
        <label>Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ddrive__Sync_Frequency__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Sync Frequency</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sync Object</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ddrive__All_Syncs</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ddrive__Last_Modified__c</columns>
        <columns>ddrive__Last_Synced__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Syncs</label>
    </listViews>
    <nameField>
        <label>Sync Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>